--- a/root/src/settings/formats.tt
+++ b/root/src/settings/formats.tt
@@ -8,6 +8,7 @@
       <th>[% loc('Name') %]</th>
       <th>[% loc('Description') %]</th>
       <th>[% loc('Active') %]</th>
+      <th>[% loc('Priority') %]</th>
     </tr>
     [% FOREACH format IN format_list %]
       <tr>
@@ -35,6 +36,18 @@
               </button>
             </form>
           [% END %]
+        </td>
+        <td>
+          <form action="[% format.change_format_priority_url %]" method="POST"
+                id="format-priority-[% format.id %]">
+            <select name="priority" onchange="this.form.submit()">
+              [% FOREACH f_priority IN f_priority_values %]
+              <option value="[% f_priority %]" [% IF f_priority == format.priority %]selected="selected"[% END %]>
+                [% f_priority %]
+              </option>
+              [% END %]
+            </select>
+          </form>
         </td>
       </tr>
     [% END %]
